# Senget

./: .gitignore  Cargo.toml  build.rs  setup.iss
src/: includes.rs  main.rs
src/includes/: cli.rs  commands.rs  database.rs  dist.rs  error.rs  github.rs  globals.rs  install.rs  package.rs  package_manager.rs  senget_manager.rs  test_utils.rs  utils.rs
src/includes/github/: api.rs  serde_json_types.rs
src/includes/senget_manager/: env.rs  package.rs
