[package]
name = "senget"
version = "1.0.0"
edition = "2021"
description = "A blazingly fast🚀 Windows package manager for Github hosted packages"
repository = "https://github.com/SenZmaKi/Senget"


[build-dependencies]
winres = "0.1"

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.4.11", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.7"
winreg = "0.52.0"
regex = "1.9.4"
lnk = "0.5.1"
spinners = "4.1.1"
zip = "0.6.6"
mslnk = "0.1.8"
